// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#A6AEBD",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#3366FF",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#3366FF",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#A6AEBD",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#3366FF",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  disabled={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#DDE1EB",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#A6AEBD",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#A6AEBD",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={false}
  disabled={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  requestStateStyle={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": 0,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#DDE1EB",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;
